--- a/src/views/Carousel.css
+++ b/src/views/Carousel.css
@@ -30,9 +30,9 @@
 
 .carousel__slide {
     display: flex;
-    transition: transform 0.5s;
     width: 100%;
-    height: 100%;
+    height: 700px;
+    transition: transform 0.5s ease-in-out;
 }
 
 .carousel__image {
