--- a/src/views/viewProduct.css
+++ b/src/views/viewProduct.css
@@ -11,11 +11,21 @@
 .item .card {
   height: 500px;
 }
-.item figure img {
+.item .allItem img {
   max-width: 50%;
   max-height: 50%;
   transition: transform 0.3s ease;
 }
-.item figure img:hover {
+.item .allItem img:hover {
   transform: scale(1.5);
+}
+
+
+/* ProductPage.jxs */
+.productPage {
+
+}
+.productPage .imgSize {
+  width: 100%;
+  height: 18rem;
 }
