--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -4,12 +4,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    /* z-index: 50;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 56px;
-    padding: 7px 20px; */
+    z-index: 50;
 }
 .headerTop {
     max-width: 1280px;
